init inventory service in soda service2

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
             <scope>test</scope>
         </dependency>
         <!-- Spring Framework -->
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- Springfox Swagger dependencies -->
         <dependency>
