--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8081
-
+org.grosserie.soda-inventory-serviceHost=http://localhost:8083
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/soda_grossiste
 spring.datasource.username=root
 spring.datasource.password=Usef@123456
 
 
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
