finalize inventory soda and getByUpc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=Usef@123456
 
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
