--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.mssc.grosserie</groupId>
-        <artifactId>mssc-grosserie-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.grosserie.bom</groupId>
+        <artifactId>mssc-grosserie-bom</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>org.mssc.grosserie</groupId>
     <artifactId>mssc-soda-service</artifactId>
