--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.username=root
 spring.datasource.password=Usef@123456
 
 
+spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.user=admin
+spring.artemis.password=admin
+
+
+
+
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 
