--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8081
-org.grosserie.soda-inventory-serviceHost=http://localhost:8083
+org.grosserie.soda-inventory-service-host=http://localhost:8083
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/soda_grossiste
 spring.datasource.username=root
 spring.datasource.password=Usef@123456
 
 
-spring.artemis.broker-url=tcp://localhost:61616
-spring.artemis.user=admin
-spring.artemis.password=admin
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
 
 
 
