--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=Usef@123456
 
 
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
 
 
 
